# Deutsch-Jozsa

./: .gitignore  Deutsch-Jozsa.cabal  LICENSE  README.md  stack.yaml
src/: FunctionParser.hs  Gate.hs  Main.hs  Matrix.hs  Quantum.hs  Utils.hs
