name:                 Deutsch-Jozsa
version:              0.1.0.0
synopsis:             Deutsch-Jozsa algorithm demo
-- description:
-- license:
-- license-file:
homepage:             
author:               Egor Malykh
maintainer:           fnk@fea.st
category:             Math
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable Deutsch-Jozsa
  main-is:              Main.hs
  -- other-modules:
  -- other-extensions:
  ghc-options:          -O2 -optc-O3
  build-depends:        base >= 4.7 && < 5, parsec, random
  hs-source-dirs:       src
  default-language:     Haskell2010
