name:                 Deutsch-Jozsa
version:              0.1.0.0
synopsis:             Deutsch-Jozsa quantum algorithm simulation
license:              MIT
license-file:         LICENSE
homepage:             https://github.com/meownoid/Deutsch-Jozsa
author:               Egor Malykh
maintainer:           fnk@fea.st
category:             Math
copyright:            (c) Egor Malykh
build-type:           Simple
cabal-version:        >=1.10

executable dj-simulation
  main-is:              Main.hs
  other-modules:        FunctionParser,
                        Gate,
                        Matrix,
                        Quantum,
                        Utils
  ghc-options:          -O2 -optc-O3
  build-depends:        base >= 4.7 && < 5, parsec, random
  hs-source-dirs:       src
  default-language:     Haskell2010
